<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/question_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/choices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/choice_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_a"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:id="@+id/choice_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_b"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:id="@+id/choice_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_c"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:id="@+id/choice_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_d"
                android:onClick="onRadioButtonClicked" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/next_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/next_button" />

    </LinearLayout>

</TableLayout>